--- a/src/app/pages/contacts-page/contacts-page.component.html
+++ b/src/app/pages/contacts-page/contacts-page.component.html
@@ -1,1 +1,3 @@
 <p>contacts-page works!</p>
+
+<a [routerLink]="['/contacts/{{id}}']" routerLinkActive="router-link-active" [state]="contact"> IR al detalle </a>
