--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,1 +1,25 @@
-<p>register-page works!</p>
+<p>register-page</p>
+
+<form [formGroup]="registerForm" (submit)="submitRegisterForm()">
+
+  <mat-form-field>
+    <input matInput placeholder="Username" formControlName="username" />
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Email" formControlName="email" />
+  </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Password" formControlName="password" />
+  </mat-form-field>
+
+  <button [disabled]="registerForm.invalid" mat-raised-button color="primary" type="submit">
+    Register New Account
+  </button>
+
+</form>
+
+<button mat-raised-button color="warning" [routerLink]="['/login']">
+  Login to my account
+</button>
