--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
-<p>home-page works!</p>
+<h1>Home</h1>
 
-<a [routerLink]="['/contacts']"> Ir a contactos</a>
-<br>
-<a [routerLink]="['/todos']"> Ir a tareas</a>
+<button mat-raised-button color="primary" [routerLink]="['/contacts']"> Ir a contactos</button>
+<br><br>
+<button mat-raised-button color="primary" [routerLink]="['/todos']"> Ir a tareas</button>
