--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,25 +1,27 @@
-<p>login-page</p>
+<h1>Login</h1>
 
-<h2>Login Form Values:</h2>
-
-<!-- pipe 'json' para pasar los valores del formulario a JSON -->
+<!-- pipe 'json' para pasar los valores del formulario a JSON
 <p>{{ loginForm.value | json }}</p>
+-->
+<mat-card>
+  <form [formGroup]="loginForm" (submit)="login()">
 
-<form [formGroup]="loginForm" (submit)="login()">
+    <mat-form-field>
+      <input matInput formControlName="email" placeholder="Email"/>
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+      <input matInput formControlName="password" placeholder="Password"/>
+    </mat-form-field>
 
-  <mat-form-field>
-    <input matInput formControlName="username" placeholder="Email"/>
-  </mat-form-field>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit">
+        Login
+      </button>
 
-  <mat-form-field>
-    <input matInput formControlName="password" placeholder="Password"/>
-  </mat-form-field>
+      <button mat-raised-button color="warning" [routerLink]="['/register']"> Create an account </button>
+    </mat-card-actions>
 
-  <button mat-raised-button color="primary" type="submit">
-    Login
-  </button>
-
-  <button mat-raised-button color="warning" [routerLink]="['/register']"> Create an account </button>
-
-</form>
+  </form>
+</mat-card>
 
