--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,25 +1,23 @@
-<p>register-page</p>
+<p>Página de registro</p>
 
-<form [formGroup]="registerForm" (submit)="submitRegisterForm()">
+<mat-card>
+  <form [formGroup]="registerForm" (submit)="submitRegisterForm()">
 
-  <mat-form-field>
-    <input matInput placeholder="Username" formControlName="username" />
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Email" formControlName="email" />
+    </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Email" formControlName="email" />
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Password" formControlName="password" />
+    </mat-form-field>
 
-  <mat-form-field>
-    <input matInput placeholder="Password" formControlName="password" />
-  </mat-form-field>
+    <button [disabled]="registerForm.invalid" mat-raised-button color="primary" type="submit">
+      Registrar nueva cuenta
+    </button>
 
-  <button [disabled]="registerForm.invalid" mat-raised-button color="primary" type="submit">
-    Register New Account
+  </form>
+
+  <button mat-raised-button color="warning" [routerLink]="['/login']">
+    Volver a Login
   </button>
-
-</form>
-
-<button mat-raised-button color="warning" [routerLink]="['/login']">
-  Login to my account
-</button>
+</mat-card>
