--- a/src/app/pages/contacts-page/contacts-page.component.html
+++ b/src/app/pages/contacts-page/contacts-page.component.html
@@ -1,3 +1,5 @@
-<p>contacts-page works!</p>
+<p>Página de contactos</p>
 
-<a [routerLink]="['/contacts/{{id}}']" routerLinkActive="router-link-active" [state]="contact"> IR al detalle </a>
+<app-contact-list>
+
+</app-contact-list>
