--- a/src/app/views/contact-list/contact-list.component.html
+++ b/src/app/views/contact-list/contact-list.component.html
@@ -1,1 +1,10 @@
-<p>contact-list works!</p>
+
+<div>
+  <h4>
+    Lista de contactos
+  </h4>
+  <div *ngFor="let c of contactList">
+    Contacto id: {{c.id}}, {{c.first_name}}, {{c.email}},
+    <a routerLink='/contacts/{{c.id}}' routerLinkActive="router-link-active" [state]="c"> Ver detalle </a>
+  </div>
+</div>
