--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,27 +1,6 @@
 <h1>Login</h1>
 
-<!-- pipe 'json' para pasar los valores del formulario a JSON
-<p>{{ loginForm.value | json }}</p>
--->
-<mat-card>
-  <form [formGroup]="loginForm" (submit)="login()">
+<app-login-form>
 
-    <mat-form-field>
-      <input matInput formControlName="email" placeholder="Email"/>
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-      <input matInput formControlName="password" placeholder="Password"/>
-    </mat-form-field>
-
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">
-        Login
-      </button>
-
-      <button mat-raised-button color="warning" [routerLink]="['/register']"> Create an account </button>
-    </mat-card-actions>
-
-  </form>
-</mat-card>
+</app-login-form>
 
