creo el componente de contacto

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,5 @@
-<p>contact works!</p>
+<p>contact works!---------</p>
+
+<h1>
+  Contact id: {{contact.id}}: {{contact.email}}, {{contact.first_name}}
+</h1>
