--- a/src/app/pages/contact-detail-page/contact-detail-page.component.html
+++ b/src/app/pages/contact-detail-page/contact-detail-page.component.html
@@ -1,6 +1,6 @@
 <p>contact-detail-page works!</p>
 
-<h1>
-  Contact id: {{idContact}}: {{contact.email}}, {{contact.first_name}}
-</h1>
+<app-contact [contact]="contact">
+
+</app-contact>
 
