--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -18,7 +18,7 @@
         Login
       </button>
 
-      <button mat-raised-button color="warning" [routerLink]="['/register']"> Create an account </button>
+      <button mat-raised-button color="warning" [routerLink]="['/register']"> Crear cuenta </button>
     </mat-card-actions>
 
   </form>
