--- a/src/app/pages/contact-detail-page/contact-detail-page.component.html
+++ b/src/app/pages/contact-detail-page/contact-detail-page.component.html
@@ -1,6 +1,9 @@
-<p>contact-detail-page works!</p>
+<h1>
+  Detalles del contacto
+</h1>
 
 <app-contact [contact]="contact">
 
 </app-contact>
 
+<br><br>
