--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <h1>Home</h1>
 
-<button mat-raised-button color="primary" [routerLink]="['/contacts']"> Ir a contactos</button>
+<mat-icon>person</mat-icon><button mat-raised-button color="primary" [routerLink]="['/contacts']"> Ir a contactos</button>
 <br><br>
-<button mat-raised-button color="primary" [routerLink]="['/todos']"> Ir a tareas</button>
+<mat-icon>content_paste</mat-icon><button mat-raised-button color="primary" [routerLink]="['/todos']"> Ir a tareas</button>
