--- a/src/app/pages/todos-page/todos-page.component.html
+++ b/src/app/pages/todos-page/todos-page.component.html
@@ -1,1 +1,7 @@
-<p>todos-page works!</p>
+<h1>Tareas</h1>
+
+<button mat-button routerLink='/todos/create'>Crear nueva tarea</button>
+
+<app-todo-list>
+
+</app-todo-list>
