--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,6 +1,7 @@
-<h1>Login</h1>
+<div class="login-content">
+  <h1>Login</h1>
 
-<app-login-form>
+  <app-login-form>
 
-</app-login-form>
-
+  </app-login-form>
+</div>
