--- a/src/app/views/contact-list/contact-list.component.html
+++ b/src/app/views/contact-list/contact-list.component.html
@@ -1,10 +1,27 @@
+ <div class="tabla-contactos">
+ <h1>Lista de contactos</h1>
 
-<div>
-  <h4>
-    Lista de contactos
-  </h4>
-  <div *ngFor="let c of contactList">
-    Contacto id: {{c.id}}, {{c.first_name}}, {{c.email}},
-    <a routerLink='/contacts/{{c.id}}' routerLinkActive="router-link-active" [state]="c"> Ver detalle </a>
-  </div>
+
+  <table mat-table [dataSource]="contactList" class="mat-elevation-z8 tabla-contactos datos">
+
+    <ng-container matColumnDef="nombre_completo">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let element"> {{element.first_name}} {{element.last_name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="detalle">
+      <th mat-header-cell *matHeaderCellDef> Ver Contacto </th>
+      <td mat-cell *matCellDef="let element">
+        <a routerLink='/contacts/{{element.id}}' routerLinkActive="router-link-active" [state]="element"> Ver detalle </a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
