--- a/src/app/pages/todos-page/todos-page.component.html
+++ b/src/app/pages/todos-page/todos-page.component.html
@@ -1,6 +1,6 @@
 <h1>Tareas</h1>
 
-<button mat-button routerLink='/todos/create'>Crear nueva tarea</button>
+<button mat-button routerLink='/todos/create'><mat-icon>add_circle_outline</mat-icon>Crear nueva tarea</button>
 
 <app-todo-list>
 
