--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,4 +1,18 @@
-<p>todo works!</p>
-<p>
-  {{todo.id}}, {{todo.title}}, {{todo.end_date}}
-</p>
+
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>{{todo.title}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content class="datos">
+    <h2>Título: {{todo.title}}</h2>
+    <h2>Descripción: {{todo.description}}</h2>
+    <h2>Urgencia: {{todo.urgency}}</h2>
+    <h2>Responsable: {{todo.responsable}}</h2>
+    <h2>Fecha inicio: {{todo.init_date | date:'dd/MM/yyyy'}}</h2>
+    <h2>Fecha fin: {{todo.end_date | date:'dd/MM/yyyy'}}</h2>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button [routerLink]="['/todos']">Volver</button>
+    <button mat-button routerLink='/todos/edit/{{todo.id}}' [state]="todo">Editar</button>
+  </mat-card-actions>
+</mat-card>
