--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,4 +2,4 @@
 
 <mat-icon>person</mat-icon><button mat-raised-button color="primary" [routerLink]="['/contacts']"> Ir a contactos</button>
 <br><br>
-<mat-icon>content_paste</mat-icon><button mat-raised-button color="primary" [routerLink]="['/todos']"> Ir a tareas</button>
+<mat-icon>content_paste</mat-icon><button mat-raised-button color="primary" routerLink='/todos'> Ir a tareas</button>
