--- a/src/app/views/todo-list/todo-list.component.html
+++ b/src/app/views/todo-list/todo-list.component.html
@@ -1,9 +1,45 @@
-<div>
-  <h4>
-    Lista de tareas
-  </h4>
-  <div *ngFor="let t of todoList">
-    Contacto id: {{t.id}}, {{t.title}}
-    <a routerLink='/todos/{{t.id}}' routerLinkActive="router-link-active" [state]="t"> Ver detalle </a>
-  </div>
-</div>
+
+
+<table mat-table [dataSource]="todoList" class="mat-elevation-z8 tabla-tareas">
+
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef> Titulo </th>
+    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef> Descripción </th>
+    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="urgency">
+    <th mat-header-cell *matHeaderCellDef> Urgencia </th>
+    <td mat-cell *matCellDef="let element"> {{element.urgency}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="responsable">
+    <th mat-header-cell *matHeaderCellDef> Responsable </th>
+    <td mat-cell *matCellDef="let element"> {{element.responsable}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="init_date">
+    <th mat-header-cell *matHeaderCellDef> Fecha Inicio </th>
+    <td mat-cell *matCellDef="let element"> {{element.init_date | date:'dd/MM/yyyy'}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="end_date">
+    <th mat-header-cell *matHeaderCellDef> Fecha Fin </th>
+    <td mat-cell *matCellDef="let element"> {{element.end_date | date:'dd/MM/yyyy'}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="detail">
+    <th mat-header-cell *matHeaderCellDef> Titulo </th>
+    <td mat-cell *matCellDef="let element">
+      <a routerLink='/todos/{{element.id}}' routerLinkActive="router-link-active" [state]="element"> Ver detalle </a>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
